--- a/2017-06-10-nginx学习笔记.md
+++ b/2017-06-10-nginx学习笔记.md
@@ -14,6 +14,12 @@ brew install nginx
 sudo nginx -c /usr/local/etc/nginx/nginx.conf
 ```
 
+Mac 上Log 文件地址：
+
+```
+/usr/local/var/log/nginx
+```
+
 停止nginx：
 
 ```
@@ -40,7 +46,90 @@ nginx: configuration file /usr/local/etc/nginx/nginx.conf test is successful
 sudo kill -HUP [主进程号]
 ```
 
-<!-- more -->
+Error log path:
+
+```
+/usr/local/var/log/nginx
+```
+
+### http basic auth
+
+#### 1. 生成密码
+
+```shell
+printf "your_username:$(openssl passwd -crypt your_password)\n" >> conf/passwd
+```
+
+#### 2. 配置
+
+```nginx
+location /kibana/ {
+  auth_basic "closed site";
+  auth_basic_user_file conf/passwd;
+  rewrite ^/kibana/(.*) /$1 break;
+  proxy_pass http://localhost:5601;
+  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header X-Real-IP $remote_addr;
+}
+```
+
+## Linux 安装配置
+
+配置时指定安装目录为`/usr/local/nginx`，且开启https 解析。
+
+```
+./configure --prefix=/usr/local/nginx --with-http_ssl_module
+make
+make install
+```
+
+开启nginx：
+
+```
+./nginx -c /usr/local/nginx/conf/my.conf
+```
+
+下面是目前服务器的一些配置：
+
+```nginx
+worker_processes  1;
+
+events {
+    worker_connections  1024;
+}
+
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+
+    sendfile        on;
+
+    keepalive_timeout  65;
+
+    server {
+        listen       80;
+        listen       443 ssl;
+        server_name  localhost;
+
+        ssl_certificate      ....pem;
+        ssl_certificate_key  ....key;
+
+        location / {
+            proxy_pass http://localhost:8000;
+        }
+
+        location /auto_deploy/ {
+            proxy_pass http://localhost:8001;
+        }
+
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   html;
+        }
+    }
+
+}
+```
 
 ## 代理其他端口的webapp 如node
 
