--- a/2017-07-23-MongoDB学习笔记.md
+++ b/2017-07-23-MongoDB学习笔记.md
@@ -96,6 +96,14 @@ Mac OS X下的安装和设置：
 
 如果以上的各个步骤都运行顺利，就可以跳到下一节啦。
 
+补充：
+
+Mongodb 后台运行：
+
+```
+./mongod --fork --dbpath=/usr/local/mongodb/data --logpath=/usr/local/mongodb/log/mongodb.log --logappend
+```
+
 #### 4. 创建集合和删除集合
 
 在上一节执行完步骤6后，你会看到命令行里显示：`connecting to: test`，这里的`test`是默认的数据库。这里我们可以新建一个数据库。在命令行里打入：
