mongodump and mongostore note

--- a/2017-09-06-mongo导出数据.md
+++ b/2017-09-06-mongo导出数据.md
@@ -30,3 +30,17 @@ mongoexport -d scorpio_dev -c movies --query '{selectStatus: "selected"}' --type
 
 - `—type=csv`
 - `—fields`
+
+### mongodump 与 mongorestore 
+
+导出数据 -d 表示数据库 -o 表示导出到的dir
+
+```
+mongodump -d scorpio_dev -o ./Desktop/scorpio_dev_lq
+```
+
+对应导入至数据库 -d 表示导入的数据库 —dir 表示数据所在目录
+
+```
+mongorestore -d scorpio_dev_0928 --dir ./Desktop/scorpio_dev_lq
+```
