--- a/2018-03-20-Linux知识点.md
+++ b/2018-03-20-Linux知识点.md
@@ -106,3 +106,77 @@ man 页面各个分级内容的意思
 - 最近修改的时间(mtime)
 - 定义文件特性的旗标(flag)，如 SetUID...
 - 该文件真正内容的指向 (pointer)
+
+## 压缩指令
+
+### 常见的压缩文件扩展名
+
+- *.Z compress 程序压缩的文件;
+- *.zip zip 程序压缩的文件;
+- *.gz gzip 程序压缩的文件;
+- *.bz2 bzip2 程序压缩的文件;
+- *.xz xz 程序压缩的文件;
+- *.tar tar 程序打包的数据，并没有压缩过;
+- *.tar.gz tar 程序打包的文件，其中并且经过 gzip 的压缩
+- *.tar.bz2 tar 程序打包的文件，其中并且经过 bzip2 的压缩
+- *.tar.xz tar 程序打包的文件，其中并且经过 xz 的压缩
+
+### 常用压缩命令
+
+- 压缩某文件，不保留源文件：`gzip 1.txt`
+- 解压缩某文件，不保留源文件：`gzip -d 1.txt.gz`
+- 压缩文件输出流，可重导向：`gzip -c 1.txt > 1.txt.gz`
+- `bzip2`和`xz`命令与上面3个相同，之后后缀改为`bz2`
+- `bzip2`和`xz` 多了个`-k`的参数，保留源文件
+
+### 打包指令tar
+
+- 打包与压缩 `tar [-z|-j|-J] [cv] [-f 待建立的新檔名] filename...`
+- 查看包含的文件名称 `tar [-z|-j|-J] [tv] [-f 既有的 tar 檔名]`
+- 解压缩 `tar [-z|-j|-J] [xv] [-f 既有的 tar 檔名] [-C 目录]`
+
+`-z gzip | -j bzip2 | -J xz`
+
+## bash
+
+- 打印变量: `echo $PATH`
+- 设置变量: `name=value`
+- 可使用字符`\` 将特殊字符变为一般字符
+- 若该变量为扩增变量内容时，则可用 "$变量名称" 或 ${变量} 累加内容
+- 若该变量需要在其他子程序执行，则需要以 `export` 来使变量变成环境变量
+- 通常大写字符为系统默认变量，自行设定变量可以使用小写字符，方便判断
+- 取消变量的方法为使用 unset :『unset 变量名称』
+- `env`或 `export` 可列出环境变量
+- `set` 观察所有变量 (含环境变量与自定义变量)
+- 基本上，在 Linux 预设的情况中，使用{大写的字母}来设定的变量 一般为系统内定需要的变量
+- `export`: 自定义变量转成环境变量
+- `alias`: 设置别名
+- `unalias`: 取消别名
+- bash 的进站与欢迎讯息: `/etc/issue, /etc/motd`
+- `stty -a` 来列出目前环境中所有的按键列表
+
+设置变量时双引号和单引号的功能不同：
+- 双引号内的特殊字符如 $ 等，可以保有原本的特性
+- 单引号内的特殊字符则仅为一般字符 (纯文本)
+
+
+## `stty` 列出的含义
+
+- intr : 送出一个 interrupt (中断) 的讯号给目前正在 run 的程序 (就是终止啰!);
+- quit : 送出一个 quit 的讯号给目前正在 run 的程序;
+- erase : 向后删除字符，
+- kill : 删除在目前指令列上的所有文字;
+- eof : End of file 的意思，代表『结束输入』。
+- start : 在某个程序停止后，重新启动他的 output
+- stop : 停止目前屏幕的输出;
+- susp : 送出一个 terminal stop 的讯号给正在 run 的程序
+
+### 快捷键对应的功能
+
+- CTRL + C: 终止目前的命令
+- CTRL + D: 输入结束EOF
+- CTRL + M: Enter
+- CTRL + S: 暂停屏幕的输出
+- CTRL + Q: 恢复屏幕的输出
+- CTRL + U: 在提示字符下，将整列命令删除
+- CTRL + Z: 『暂停』目前的命令
