添加知识点

--- a/2018-03-20-Linux知识点.md
+++ b/2018-03-20-Linux知识点.md
@@ -160,7 +160,7 @@ man 页面各个分级内容的意思
 - 单引号内的特殊字符则仅为一般字符 (纯文本)
 
 
-## `stty` 列出的含义
+### `stty` 列出的含义
 
 - intr : 送出一个 interrupt (中断) 的讯号给目前正在 run 的程序 (就是终止啰!);
 - quit : 送出一个 quit 的讯号给目前正在 run 的程序;
@@ -180,3 +180,30 @@ man 页面各个分级内容的意思
 - CTRL + Q: 恢复屏幕的输出
 - CTRL + U: 在提示字符下，将整列命令删除
 - CTRL + Z: 『暂停』目前的命令
+
+### 数据流重导向
+
+`>` 为覆盖 `>>` 为累加
+
+- 标准输入 stdin 代码为0 使用`<` 或`<<`
+- 标准输出 stdout 代码为1 使用`>` 或`>>`
+- 标准错误输出 stderr 代码为2 使用`2>` 或`2>>`
+
+举例：
+
+将标准输出和标准错误输出分别保存至两个文件中：
+
+```bash
+find /home -name .bashrc > list_right 2> list_error
+```
+
+不显示标准错误输出（导入到`/dev/null` 中）：
+
+```bash
+find /home -name .bashrc 2> /dev/null
+```
+
+不区分标准输出和错误，一起导入到一个文件中：
+```bash
+find /home -name .bashrc > list 2>&1
+```
