修改标题错误

--- a/2018-03-20-Linux知识点.md
+++ b/2018-03-20-Linux知识点.md
@@ -207,3 +207,131 @@ find /home -name .bashrc 2> /dev/null
 ```bash
 find /home -name .bashrc > list 2>&1
 ```
+
+## 账号管理、权限设置
+
+命令相关：
+
+- 新增使用者：`useradd`
+- 设置账号密码：`passwd`
+- 更新使用者配置：`usermod`
+- 删除y用户相关数据：`userdel`
+- 查询uid/gid等信息：`id`
+- change shell： `chsh`
+- 添加群组：`groupadd`
+- 修改群组配置：`groupmod`
+- 删除群组：`groupdel`
+- 群组管理员功能：`gpasswd`
+- 使用者身份切换：`su`, `sudo`
+- 查询使用者：`w`, `who`, `last`, `lastlog`
+- 邮件：`mail`
+
+## 例行性工作进程
+
+无论是`at` 还是`crontab`，它们的最小时间单位都是**分钟**，在**整分钟时间**运行，即秒为0的时候运行。
+
+### 仅执行一次的工作排程 at
+
+必须有`atd` 进程运行，才会执行`at` 中设定的工作。用`at` 添加工作进程后，实际上是将此工作以文本方式写入至目录`/var/spool/at/` 中，然后该工作便能等待`atd` 的取用和执行了。
+
+可以使用`/etc/at.allow` 和`/etc/at.deny` 两个文件对使用`at` 命令的用户作出限制。
+
+命令
+
+```bash
+at [-mldv] TIME
+```
+
+- `-c`，列出某一项排程内容
+- `-l` 相当于`atq`，列出排程
+- `-d` 相当于`atrm`，删除某一排程
+
+TIME 的设定规则举例：
+
+```bash
+at 04:00
+at 04:00 2018-05-05
+at now + 3 days
+at now + 1 minute
+```
+
+- `at` 排程执行时是用的下达命令时所在的目录，所以为避免出错，目录相关设置可设置为绝对目录。
+- `at` 是背景执行的，类似于`nohup`
+
+### 系统有空时才进行的背景任务 batch
+
+会在CPU负载小于0.8时，才进行所下达的任务。
+
+> 负载：CPU在单一时间点所负责的工作数量，而非CPU使用率。CPU负载越大，会频繁地在不同任务之间切换。命令`uptime` 可看到负载信息。
+
+`batch` 也是用`atq/atrm` 来管理的。
+
+### 循环执行的例行性工作排程
+
+循环执行的例行性工作排程则是由`cron(crond)` 这个系统服务来控制的。
+
+可以使用`/etc/cron.allow` 和`/etc/cron.deny` 两个文件对使用`crontab` 命令的用户作出限制。
+
+当用户使用`crontab` 这个指令来建立工作排程之后，该项工作就会被纪录到`/var/spool/cron/` 里面去了，而且是以账号来作为判别的。
+
+`crontab [-e][-l][-r]`
+
+- `-e` 编辑工作内容
+- `-l` 查阅工作内容
+- `-r` 移除所有工作内容
+
+编辑工作内容，示例：
+
+```
+0-59 * * * * date >> 1.txt
+分 时 日 月 周 指令
+```
+特殊字符包括：星号*、逗号,、减号-、斜线/n
+
+命令内容建议使用**绝对路径**。
+
+如果是**系统的例行性任务**，可以直接编辑`/etc/crontab` 文件。
+
+`crond` 预设有三个地方有会执行脚本配置文件：
+
+- `/etc/crontab` 系统维护管理
+- `/etc/cron.d/*` 自己开发软件
+- `/var/spool/cron/*` 个人行为
+
+> `anacron` 可唤醒停机时间的工作任务
+
+## 进程管理
+
+程序被触发后，执行者的权限与属性、程序的程序代码与所需数据等都会被加载内存中，操作系统并给予这个内存内的单元一个标识符 (PID)，可以说，进程就是一个正在运作中的程序。
+
+子进程的PPID与父进程的PID相等。
+
+- `&` 将工作丢到背景中执行
+- `ctrl + z` 将目前工作丢到背景中暂停
+- `jobs` 观察目前背景中工作状态
+- `fg %jobnumber` 将背景工作拿到前景来处理
+- `bg` 将背景中暂停的工作变成运行状态
+- `kill PID` 给某进程发送信号
+- `killall name` 给相关的所有进程发送信号
+- `nohup` 脱机管理工作
+
+`kill/killall` 讯号signal：
+
+- `-9` 强制删除一个工作
+- `-15` 正常步骤结束一个工作（默认）
+
+### 进程观察
+
+`ps` 将某个时间点的进程显示出来
+
+- `ps -l` 当前`bash` 的进程
+- `ps aux` 所有系统运作的进程
+
+`top` 动态观察进程的状态，执行过程中可以使用指令：
+
+- P 以CPU 使用资源排序
+- M 以Memory 使用资源排序
+- N 以PID 排序
+- k 给予某个PID 一个signal
+
+`pstree` 列出进程树，`-p` 同时列出PID
