--- a/2018-03-20-Linux知识点.md
+++ b/2018-03-20-Linux知识点.md
@@ -314,6 +314,7 @@ at now + 1 minute
 - `kill PID` 给某进程发送信号
 - `killall name` 给相关的所有进程发送信号
 - `nohup` 脱机管理工作
+- `nice/renice` 调整优先级
 
 `kill/killall` 讯号signal：
 
@@ -335,3 +336,68 @@ at now + 1 minute
 - k 给予某个PID 一个signal
 
 `pstree` 列出进程树，`-p` 同时列出PID
+
+### 系统资源的观察
+
+- `free` 观察内存使用情况
+- `uname` 查阅系统与核心相关信息
+- `uptime` 观察系统启动时间与工作负载
+- `netstat` 追踪网络或插槽文件
+- `dmesg` 分析核心产生的讯息
+- `vmstat` 侦测系统资源变化
+
+`netstat` 参数
+
+- `-a` 将目前系统上所有的联机、监听、Socket 数据都列出来
+- `-t` 列出tcp 网络封包的数据
+- `-u` 列出udp 网络封包的数据
+- `-n` 不以进程的服务名称，以端口号来显示
+- `-l` 列出目前正在网络监听的服务（listing）
+- `-p` 列出改网络服务的进程PID
+
+常用命令`netstat -tulnp`
+
+## 系统服务 daemon
+
+早起所有的服务启动脚本通通放置于`/etc/init.d/` 底下，现在用`systemd` 来进行管理。
+
+`systemd` 配置文件放置目录：
+
+- `/usr/lib/systemd/system/`
+- `/run/systemd/system/`
+- `/etc/systemd/system/`
+
+通过`systemctl` 指令管理
+
+`systemctl [command] [unit]`
+
+- start
+- stop
+- restart
+- reload 重载配置文件
+- enable 下次开机时启动
+- disable 下次开机时不启动
+- status 状态
+
+直接`systemctl` 列出系统上启动的`unit`
+
+## 软件安装
+
+### 通过源码安装
+
+一般步骤为：通过`configure` 来建立`Makefile`，之后通过`make` 安装即可。
+
+`Makefile` 示例：
+
+```
+main:
+	ps aux >> 1.txt
+clean:
+	rm 1.txt
+```
+
+### 软件安装
+
+Red Hat/Fedora, RPM, rpm, yum
+
+Debian/Ubuntu, DPKG, dpkg, apt-get
